# advent-of-code-python

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run_day.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: orchestrator.yaml
scripts/: generate_new_day_skeleton_files_from_templates.py  run_all_solutions.py  run_day.py
scripts/templates/: days_template.txt  solvers_template.txt  tests_template.txt
src/advent_of_code/: __main__.py  cli.py
src/advent_of_code/2023/: day_01.py
src/advent_of_code/scripts/: generate_new_day_skeleton_files_from_templates.py
src/advent_of_code/scripts/templates/: days_template.txt  tests_template.txt
src/advent_of_code/utils/: input_handling.py  problem.py
src/advent_of_code/year_2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_06.py
src/advent_of_code/year_2023/days/: 1.py  2.py  3.py  4.py  6.py
src/advent_of_code/year_2023/solvers/: day_1_solvers.py  day_3_solvers.py
src/advent_of_code/year_2024/: day_01.py  day_02.py  day_03.py  day_04.py
src/advent_of_code/year_2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_07.py
src/aoc_2023/: helpers.py
src/aoc_2023/days/: 1.py  2.py  3.py  4.py  5.py  6.py
src/aoc_2023/helpers/: day_1_solvers.py  day_3_solvers.py  input_handling.py  solvers.py
src/aoc_2023/solvers/: day_1_solvers.py  day_2_solvers.py  day_3_solvers.py  day_4_solvers.py  day_5_solvers.py  day_6_solvers.py
tests/: test_day_1_solvers.py  test_day_2_solvers.py  test_day_3_solvers.py  test_day_4_solvers.py  test_day_5_solvers.py  test_day_6_solvers.py  test_helpers.py  test_helpers_day_1_solvers.py  test_helpers_day_2_solvers.py  test_helpers_day_3_solvers.py  test_helpers_solvers.py
tests/2023/: day_04.py
tests/year_2023/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_06.py  test_day_1_solvers.py  test_day_2_solvers.py  test_day_3_solvers.py  test_day_4_solvers.py  test_day_6_solvers.py
tests/year_2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py
tests/year_2025/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_07.py
