[project]
name = "advent-of-code-python"
version = "0.0.1"
authors = [
  { name="James Lawlor", email="jameslawlor1987@gmail.com" },
]
description = "Code for Advent of Code 2023"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jameslawlor/advent-of-code-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']