[project]
name = "advent-of-code-python"
version = "0.0.1"
authors = [
  { name="James Lawlor", email="jameslawlor1987@gmail.com" },
]
description = "Code for Advent of Code 2023"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jameslawlor/advent-of-code-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advent_of_code"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88
target-version = ['py39']

[project.scripts]
# Console script for running day solutions: after `pip install -e .` you can run `aoc --year 2025 --day 1`
aoc = "advent_of_code.cli:main"